--- a/Presentation/Modules/DeckCreate/View/Custom/List/DeckCreateListView.xib
+++ b/Presentation/Modules/DeckCreate/View/Custom/List/DeckCreateListView.xib
@@ -9,6 +9,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DeckCreateListView" customModule="Presentation" customModuleProvider="target">
             <connections>
                 <outlet property="deckCardCollectionView" destination="rMj-Jt-90H" id="DX5-Ej-dzq"/>
+                <outlet property="indicator" destination="Qml-c6-3hi" id="cZ7-FH-qUA"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,13 +26,22 @@
                         <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Qml-c6-3hi">
+                    <rect key="frame" x="197" y="299" width="20" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="20" id="3FS-wp-kmj"/>
+                        <constraint firstAttribute="height" constant="20" id="KNj-T6-qlE"/>
+                    </constraints>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
                 <constraint firstItem="rMj-Jt-90H" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Dn9-Yb-279"/>
                 <constraint firstAttribute="bottom" secondItem="rMj-Jt-90H" secondAttribute="bottom" id="RVX-R5-ZIB"/>
+                <constraint firstItem="Qml-c6-3hi" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="XAD-gT-Rv3"/>
                 <constraint firstItem="rMj-Jt-90H" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="iwp-g8-Atz"/>
                 <constraint firstAttribute="trailing" secondItem="rMj-Jt-90H" secondAttribute="trailing" id="jdp-OA-ZvD"/>
+                <constraint firstItem="Qml-c6-3hi" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="z7x-4J-Gg6"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="139" y="154"/>
